# 3DGameEngine

./: .gitatributes  .gitattributes  CMakeLists.txt
engine/: Engine.h  Entry.cpp  classRegistarion.h  engine.cpp  engine.h  input.cpp  input.h  phisycs.cpp  phisycs.h  renderer.cpp  renderer.h  scene.cpp  scene.h  soundEngine.cpp  soundEngine.h  utils.cpp  utils.h  window.cpp  window.h
engine/shaders/: shader.f  shader.v
game/: test.cpp  testGame.project  testScene.scene  tilemap.tilemap
glad/: glad.c  glad.h
scripts/: build.sh  install-deps.sh  run-with-xvfb.sh  start-vnc.sh
